# zkproofs-assignments

birthday-merkle/: Cargo.toml
birthday-merkle/core/: Cargo.toml
birthday-merkle/core/src/: birthday.rs  lib.rs  merkle.rs
birthday-merkle/methods/: Cargo.toml
birthday-merkle/methods/guest/: Cargo.toml
birthday-merkle/methods/guest/src/: main.rs
ring-signature/: Cargo.toml
ring-signature/core/: Cargo.toml
ring-signature/core/src/: lib.rs
ring-signature/methods/: Cargo.toml
ring-signature/methods/guest/: Cargo.toml
ring-signature/methods/guest/src/: main.rs
ring-signature/src/: Cargo.toml
substring-signature/: Cargo.toml
substring-signature/core/: Cargo.toml
substring-signature/core/src/: lib.rs
substring-signature/methods/: Cargo.toml
substring-signature/methods/guest/: Cargo.toml
substring-signature/methods/guest/src/: main.rs
substring-signature/src/: Cargo.toml
