[package]
name = "birthday"
version = "0.1.0"
edition = "2021"

[build-dependencies]
risc0-build = { version = "1.0.5" }

[dependencies]
bincode = "1.3"
clap = { version = "4.0", features = ["derive"] }
risc0-zkvm = { version = "1.1.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
birthday-core = { path = "core" }
birthday-methods = { path = "methods" }

[features]
default = []
