[package]
name = "ring"
version = "0.1.0"
edition = "2021"

[build-dependencies]
risc0-build = { version = "1.0.5" }

[dependencies]
bincode = "1.3"
clap = { version = "4.0", features = ["derive"] }
k256 = { version = "=0.13.1", features = ["arithmetic", "serde", "expose-field", "std", "ecdsa"], default-features = false }
rand = "0.8"
risc0-zkvm = { version = "1.0.5" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ring-methods = { path = "methods" }
ring-core = {path = "core"}
rand_core = { version = "0.6.4" }

[features]
default = []