[package]
name = "birthday-core"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
risc0-build = { version = "1.0.5" }

[dependencies]
bincode = "1.3"
chrono = "0.4"
divrem = "1.0"
elsa = "1.7"
merkle_light = "0.4"
merkle_light_derive = "0.4"
risc0-zkvm = { version = "1.1.1" }
serde = "1.0"

[dev-dependencies]
hex = "0.4"
rand = "0.8"
sha2 = "0.10"