[package]
name = "ring-core"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3"
k256 = "0.13"
rand = "0.8"
risc0-zkvm = { version = "1.0.5" }
serde = "1.0"
rand_core = { version = "0.6.4" }

[dev-dependencies]
hex = "0.4"
rand = "0.8"
sha2 = "0.10"
rand_core = { version = "0.6.4" }
