[package]
name = "substring"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
k256 = { version = "=0.13.1", features = ["arithmetic", "serde", "expose-field", "std", "ecdsa"], default-features = false }
risc0-zkvm = { version = "1.0.5", default-features = false, features = ['std'] }
substring-core = { path= "../../core/" }
rand_core = { version = "0.6.4" }
